k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diagrams
  namespace: diagrams
  labels:
    app: diagrams
spec:
  type: ClusterIP
  selector:
    app: diagrams
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
